cluster/apps/calibre/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: calibre
    namespace: calibre
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-production
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
    labels:
        app.kubernetes.io/instance: calibre
        app.kubernetes.io/name: calibre
spec:
    ingressClassName: traefik
    rules:
        - host: ENC[AES256_GCM,data:Nk/sWeTKbKtI4FPlDTmhpGA700YUqAcBiRpwpXM/SGzt4swAGA==,iv:Gby41QMa159IWKOB6sB/y9masNUJ4p9mKRTUwTJvtfQ=,tag:Xzuf7g+zUTsdB3mBw9tIpA==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: calibre
                        port:
                            number: 8080
        - host: ENC[AES256_GCM,data:ZU3nSJMP1ljiBzHUaKvT/HoBB5YayJTHfBqVpbAs,iv:Zmgg8Jc72ugDbuuDa9BqsKy7jFX6XL1cxWcUiSH3Znk=,tag:6Aeo4rySa5GP3jEqj5GXEQ==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: calibre
                        port:
                            number: 8083
    tls:
        - hosts:
            - ENC[AES256_GCM,data:b6T9+LaSdnm1b+4gOzVMnJsbdjLODwAe+w922Oyu,iv:PgtCDpeNmiim/pyl+zzN5FcQh2/yROBP1vr+Nktr0IM=,tag:XD/Ypbpvqq0AMiHrV4L+KA==,type:str]
            - ENC[AES256_GCM,data:R0gDEI7OfPQgWkDivdtH60RWyOO99LhL2zG20cbag5rtyyizlQ==,iv:3bh9jnQelx9vxgyNgF9PjUA62lbliKmWwesZYrtn3yg=,tag:cnKei+tMbkXdn7tKQTbjmQ==,type:str]
          secretName: calibre-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-10-30T23:41:30Z"
    mac: ENC[AES256_GCM,data:dAnJjn+jvJW1ZJ8SNGoCJxeOVE4kgbBEJWEhfw20yj7nK9X1SH4UMXZRwfuh5jyw3vLB3rBo2jzrH35HbXqfvIYn5wB59zGkkkeGC07lZ8u/ieUpRUDySK58Q+MGQGxa9mswe6GNqMRkfsM3D7goIuV9b5z9iQ1GpTd21UVd97o=,iv:7GY4bziy5m3bxddaSTbc3DNkE2zCkua+ea7fKjAA54Q=,tag:S5n2l6DEnWEQmwDAP6A/yg==,type:str]
    pgp:
        - created_at: "2021-10-30T23:41:29Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA80P3erPiRpkARAAqVvqCfb/Y2Myzb3VJNZ1QtTup8fVTI2OmFEJzWa42ZNp
[...]
            =qwtO
            -----END PGP MESSAGE-----
          fp: F92C1A4A2B35F826A1E364EFF5A1747BE18D04FC
    encrypted_regex: ^(helm|data|stringData|networkPath|hosts?)$
    version: 3.7.1
